se conecto el componente educacion al backend

--- a/angular.json
+++ b/angular.json
@@ -91,6 +91,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "portfolioFrontEnd:build:production",
+            "firebaseProject": "authportfolioar",
+            "firebaseHostingSite": "loginid"
+          }
         }
       }
     }
